  * Renamed SpectralNormalProcess to SpectralGaussianProcess
  * Renamed GeneralizedLinearModelAlgorithm to GeneralLinearModelAlgorithm
  * Renamed GeneralizedLinearModelResult to GeneralLinearModelResult
  * Renamed DynamicalFunction to FieldFunction
  * Renamed SpatialFunction to ValueFunction
  * Renamed TemporalFunction to VertexValueFunction
  * Deprecated [gs]etOptimizationSolver methods

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * #729 (KDTree & save)
 * #774 (Exact limits of a normal distribution with unknown mean and variance)
 * #871 (GeneralizedExponential P parameter : int or float ?)
 * #872 (Cannot draw a Text drawable using R)
 * #874 (Compatibility between a distribution factory and an alternate parametrization not checked)
 * #875 (TruncatedNormalFactory randomly crashes)
 * #876 (Bad time grid in StationaryCovarianceModelFactory::build)

== 1.8 release (2016-11-18) == #release-1.8

=== Library ===

==== Major changes ====
 * Changed the default orthonormalization algorithm of StandardDistributionPolynomialFactory from GramSchmidtAlgorithm to AdaptiveStieltjesAlgorithm
 * New api for sensitivity analysis
 * New methods to compute confidence regions in Distribution

==== New classes ====
 * SubsetSampling
 * AdaptiveDirectionalSampling
 * KarhunenLoeveQuadratureFactory
 * SobolIndicesAlgorithm
 * SaltelliSensitivityAlgorithm
 * MartinezSensitivityAlgorithm
 * JansenSensitivityAlgorithm
 * MauntzKucherenkoSensitivityAlgorithm
 * SoizeGhanemFactory
 * LevelSetMesher
 * HistogramPolynomialFactory
 * ChebychevFactory

==== API changes ====
 * Removed deprecated (AbdoRackwitz|Cobyla|SQP|TNC)SpecificParameters classes
 * Removed AbdoRackwitz|Cobyla|SQP::[gs]etLevelFunction|[gs]etLevelValue
 * Removed deprecated OptimizationSolver::setMaximumIterationsNumber
 * Removed deprecated method Distribution::setParametersCollection(NP)
 * Removed deprecated PersistentFactory string constructor