@@ -61,7 +61,7 @@ ot_add_source_file (LinearCombinationEvaluationImplementation.cxx)
 ot_add_source_file (LinearCombinationGradientImplementation.cxx)
 ot_add_source_file (LinearCombinationHessianImplementation.cxx)
 ot_add_source_file (ProductNumericalMathEvaluationImplementation.cxx)
-ot_add_source_file (ProductNumericalMathFunction.cxx)
+ot_add_source_file (ProductFunction.cxx)
 ot_add_source_file (ProductNumericalMathGradientImplementation.cxx)
 ot_add_source_file (ProductNumericalMathHessianImplementation.cxx)
 ot_add_source_file (DatabaseFunction.cxx)
@@ -138,7 +138,7 @@ ot_install_header_file (MethodBoundNumericalMathEvaluationImplementation.hxx)
 ot_install_header_file (ComposedNumericalMathHessianImplementation.hxx)
 ot_install_header_file (OTFunc.hxx)
 ot_install_header_file (NumericalMathHessianImplementation.hxx)
-ot_install_header_file (ProductNumericalMathFunction.hxx)
+ot_install_header_file (ProductFunction.hxx)
 ot_install_header_file (LinearNumericalMathGradientImplementation.hxx)
 ot_install_header_file (LinearNumericalMathEvaluationImplementation.hxx)
 ot_install_header_file (IdentityEvaluation.hxx)
