@@ -1,5 +1,5 @@
-myFunction=class=NumericalMathFunction name=Unnamed implementation=class=ProductNumericalMathFunction name=Unnamed description=[x0,x1,x2,y0,y1] left function=class=NumericalMathFunctionImplementation name=Unnamed description=[x0,x1,x2,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0] formulas=[x0^2 + 2 * x1 * x2 + 3 * x2] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0] formulas=[x0^2 + 2 * x1 * x2 + 3 * x2] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0] formulas=[x0^2 + 2 * x1 * x2 + 3 * x2] right function=class=NumericalMathFunctionImplementation name=Unnamed description=[x0,x1,x2,y0,y1] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0,y1] formulas=[x2 - x0 + x1,x0 + x1 * x0 + x2] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0,y1] formulas=[x2 - x0 + x1,x0 + x1 * x0 + x2] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0,y1] formulas=[x2 - x0 + x1,x0 + x1 * x0 + x2]
-myFunction=class=ProductNumericalMathFunction name=Unnamed description=[x0,x1,x2,y0,y1] left function=[x0,x1,x2]->[x0^2 + 2 * x1 * x2 + 3 * x2] right function=[x0,x1,x2]->[x2 - x0 + x1,x0 + x1 * x0 + x2]
+myFunction=class=NumericalMathFunction name=Unnamed implementation=class=ProductFunction name=Unnamed description=[x0,x1,x2,y0,y1] left function=class=NumericalMathFunctionImplementation name=Unnamed description=[x0,x1,x2,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0] formulas=[x0^2 + 2 * x1 * x2 + 3 * x2] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0] formulas=[x0^2 + 2 * x1 * x2 + 3 * x2] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0] formulas=[x0^2 + 2 * x1 * x2 + 3 * x2] right function=class=NumericalMathFunctionImplementation name=Unnamed description=[x0,x1,x2,y0,y1] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0,y1] formulas=[x2 - x0 + x1,x0 + x1 * x0 + x2] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0,y1] formulas=[x2 - x0 + x1,x0 + x1 * x0 + x2] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0,x1,x2] outputVariablesNames=[y0,y1] formulas=[x2 - x0 + x1,x0 + x1 * x0 + x2]
+myFunction=class=ProductFunction name=Unnamed description=[x0,x1,x2,y0,y1] left function=[x0,x1,x2]->[x0^2 + 2 * x1 * x2 + 3 * x2] right function=[x0,x1,x2]->[x2 - x0 + x1,x0 + x1 * x0 + x2]
 Value at class=NumericalPoint name=Unnamed dimension=3 values=[1.2,2.3,3.4]=
 class=NumericalPoint name=Unnamed dimension=2 values=[122.76,200.781]
 Value at class=NumericalPoint name=Unnamed dimension=3 values=[1.2,2.3,3.4]=
