@@ -270,7 +270,7 @@ ot_add_python_module(func func_module.i
                       ProductNumericalMathGradientImplementation.i
                       ProductNumericalMathHessianImplementation.i
                       NumericalMathFunctionImplementation.i NumericalMathFunctionImplementation_doc.i.in
-                      ProductNumericalMathFunction.i
+                      ProductFunction.i ProductFunction_doc.i.in
                       NumericalMathFunction.i NumericalMathFunction_doc.i.in
                       AggregatedFunction.i AggregatedFunction_doc.i.in
                       SymbolicFunction.i SymbolicFunction_doc.i.in
